[package]
name = "egui-notify"
version = "0.15.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ItsEthra/egui-notify"
description = "Simple notifications library for EGUI"
authors = ["ItsEthra"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
# egui = { version = "0.22", default-features = false }
# egui = { path="../egui/crates/egui", default-features = false }
egui = { git = "https://github.com/aspectron/egui", branch = "omega"}


[dev-dependencies]
eframe = { version = "0.28.0", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui-phosphor = { git = "https://github.com/aspectron/egui-phosphor", branch = "omega" }
# egui-phosphor = { path="../egui-phosphor"}

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = 0 }
enum_glob_use = { level = "deny", priority = 2 }


